# framework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
binary/: generator
config/: mosquitto.conf
documentation/: CMakeLists.txt  Design.md  Doxyfile  Doxyfile.in  DoxygenLayout.xml  Manual.md  README.md  ReleaseNotes.md  gtest.php  statemachine.py
drivers/: CMakeLists.txt  Makefile  pwm-pca9685.c
enviroment/: .bash_profile  .clang-format  .vimrc  bash_profile  git-template  setup.sh
enviroment/config/boot/: cmdline.txt  config.txt
enviroment/config/etc/ld.so.conf.d/: arm-linux-gnueabihf.conf
enviroment/config/etc/modprobe.d/: pwm_pca9685.conf
enviroment/config/etc/modules-load.d/: modules.conf
enviroment/config/etc/mosquitto/: mosquitto.conf
enviroment/config/etc/systemd/system/: homebridge.service  mosquitto.service
enviroment/config/var/lib/homebridge/: config.json
enviroment/linux/: .config  build.sh  deploy.sh
enviroment/linux/drivers/pwm/: pwm-pca9685.c
features/: CMakeLists.txt  shutdown.feature  startup.feature
features/step_definitions/: step_definitions.cpp
include/: AbstractFactory.h  Builder.h  Channel.h  Composite.h  Configurator.h  Core.h  Factory.h  Framework.h  Generic.h  Generic.old  IActuator.h  IChipset.h  IConfigurator.h  IDevice.h  IMosquitto.h  IParameter.h  IParameter2.h  ISensor.h  Modules.h  Object.h  Observer.h  Observer.old  Signal.h  Singleton.h  StateMachine.h  Subject.h  Visitor.h
include/designpatterns/: AbstractFactory.h  Builder.h  Observer.h  Singleton.h
include/mocks/: MockConfigurator.h  MockGeneric.h  MockMosquitto.h  MockParameter.h  MockSignal.h
kernel/: .config  CMakeLists.txt  Install.sh
prototype/: CMakeLists.txt  kernel.cpp  mosquitto.cpp  pca9685.cpp  rapidjson.cpp  spdlog.cpp  tinyfsm.cpp  tinyxml2.cpp
source/: CMakeLists.txt  Framework.cpp  Framework.h  framework.xml
source/core/: .Core.cpp.swp  Builder.cpp  CMakeLists.txt  Composite.cpp  Core.cpp  Factory.cpp  Generic.cpp  Object.cpp  Observer.cpp  Singleton.cpp  StateMachine.cpp  Subject.cpp
source/core/configurator/: CMakeLists.txt  Configurator.cpp  Configurator.h
source/core/configurator/test/gtest/: CMakeLists.txt  \  gtest-configurator.cpp  gtest-configurator.xml
source/core/designpatterns/: CMakeLists.txt
source/core/designpatterns/builder/: Builder.cpp  CMakeLists.txt
source/core/designpatterns/builder/gtest/: CMakeLists.txt  gtest-builder.cpp
source/core/designpatterns/composite/: Composite.cpp
source/core/designpatterns/composite/test/gtest/: CMakeLists.txt  gtest-composite.cpp
source/core/designpatterns/factory/: AbstractFactory.h
source/core/designpatterns/factory/gtest/: CMakeLists.txt  gtest-abstract-factory.cpp  gtest-factory.cpp
source/core/designpatterns/factory/test/gtest/: CMakeLists.txt  gtest-abstract-factory.cpp
source/core/designpatterns/observer/: Observer.cpp
source/core/designpatterns/observer/test/gtest/: CMakeLists.txt  gtest-observer.cpp
source/core/designpatterns/singleton/: Singleton.cpp
source/core/designpatterns/singleton/gtest/: gtest-singleton.cpp
source/core/designpatterns/singleton/test/gtest/: CMakeLists.txt  gtest-singleton.cpp
source/core/gtest/: CMakeLists.txt  gtest-builder.cpp  gtest-composite.cpp  gtest-factory.cpp  gtest-generic.cpp  gtest-object.cpp  gtest-observer.cpp  gtest-singleton.cpp  gtest-statemachine.cpp
source/core/mosquitto/: CMakeLists.txt  Mosquitto.cpp  Mosquitto.h  Mosquitto.md  MqttStateMachine.cpp  MqttStateMachine.h  StateMachine.cpp  StateMachine.h  Visitor.cpp  Visitor.h  main.cpp  mosquitto.xml
source/core/mosquitto/test/gtest/: CMakeLists.txt  MockMosquitto.h  gtest-mosquitto.cpp  gtest-mosquitto.xml
source/core/parameter/: CMakeLists.txt  Parameter.bak  Parameter.cpp  Parameter.h  ParameterFactory.cpp  ParameterFactory.h  ParameterRange.cpp  ParameterRange.h
source/core/parameter/test/gtest/: CMakeLists.txt  gtest-parameter-factory.cpp  gtest-parameter-range.cpp  gtest-parameter.cpp
source/core/profiler/: Makefile  cmake_install.cmake
source/core/utils/version/: CMakeLists.txt  version.cpp
source/core/xml/: .XMLParser.h.swp  CMakeLists.txt  XMLParser.cpp  XMLParser.h
source/hardware/: CMakeLists.txt  Hardware.cpp
source/hardware/actuators/: Actuator.cpp  Actuator.h  Actuator.md  CMakeLists.txt  Channel.cpp  Channel.h  actuator.xml  main.cpp
source/hardware/actuators/test/gtest/: CMakeLists.txt  gtest-actuator.cpp
source/hardware/drivers/: CMakeLists.txt
source/hardware/drivers/chipset/: .Chipset.h.swp  CMakeLists.txt  Chipset.cpp  Chipset.h  ChipsetFactory.cpp  ChipsetFactory.h
source/hardware/drivers/chipset/test/gtest/: CMakeLists.txt  gtest-chipset.cpp
source/hardware/drivers/device/: CMakeLists.txt  Device-ADC.h  Device.cpp  Device.h
source/hardware/drivers/device/test/: CMakeLists.txt
source/hardware/drivers/device/test/gtest/: CMakeLists.txt  gtest-device.cpp
source/hardware/drivers/signal/: CMakeLists.txt  Signal.cpp
source/hardware/sensors/: CMakeLists.txt  Sensor.h
